<resources>
    <string name="app_name">Flooring Master</string>
    <string name="address_list">Addresses</string>

    <string name="empty">No Addresses Found</string>
    <string name="empty_list">Press the Plus Sign To Add An Address.</string>

    <string name="address_id_label">ID</string>
    <string name="address_id_prefix">ID: </string>
    <string name="address_id_null"> - No ID - </string>
    <string name="address_firstName_hint">First Name</string>
    <string name="address_lastName_hint">Last Name</string>
    <string name="address_company_hint">Company</string>
    <string name="address_streetNumber_hint">Street Number</string>
    <string name="address_streetName_hint">Street Name</string>
    <string name="address_city_hint">City</string>
    <string name="address_state_hint">State</string>
    <string name="address_zip_hint">Zip Code</string>

    <string name="submit_button">Submit</string>
    <string name="submit_progress_title">Submiting Address</string>
    <string name="submit_progress_body">Submitting Address To Service</string>

    <!--<string name="starting_root_url">http://192.168.128.251:8080</string>-->
    <string name="starting_root_url">http://10.0.2.2:8080</string>
    <!--<string name="starting_root_url">http://mighty-eyrie-28532.heroku.com</string>-->

    <string name="edit_address_button">Edit</string>
    <string name="return_address_button">Return</string>
    <string name="address_show_fullName_text">Full Name</string>
    <string name="address_show_company_text">Company Name</string>
    <string name="address_show_streetAddress_text">Street Address</string>
    <string name="address_show_cityStateAndZip_text">City State And Zipcode</string>
    <string name="error_dialog_text">Something Went Wrong During Operation</string>
    <string name="error_accept">Ok</string>
    <string name="validation_errors">Validation Error</string>

    <string name="search_by">Search By:</string>
    <string name="decline">Cancel</string>
    <string name="accept">Confirm</string>
    <string name="confirm_dialog_text">Please Confirm This Action</string>
    <string name="confirm_title">Confirm Action</string>
    <string name="confirm_delete_dialog">Delete Address With Name %1$s From %2$s</string>
    <string name="delete_success">Deletion Succeeded</string>

    <string-array name="search_by_array">
        <item>Everything</item>
        <item>Name</item>
        <item>Company</item>
        <item>Name Or Company</item>
        <item>Street</item>
        <item>City</item>
        <item>State</item>
        <item>Zipcode</item>
    </string-array>
</resources>
