<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address_id_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_id_label" />

        <TextView
            android:id="@+id/address_firstName_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_firstName_hint" />

        <TextView
            android:id="@+id/address_lastName_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_lastName_hint" />

        <TextView
            android:id="@+id/address_company_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_company_hint" />

        <TextView
            android:id="@+id/address_streetNumber_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_streetNumber_hint" />

        <TextView
            android:id="@+id/address_streetName_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_streetName_hint" />

        <TextView
            android:id="@+id/address_city_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_city_hint" />

        <TextView
            android:id="@+id/address_state_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_state_hint" />

        <TextView
            android:id="@+id/address_zip_textView"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_zip_hint" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible" />
    </RelativeLayout>
</RelativeLayout>