<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/edit_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address_edit_id_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_id_label" />

            <EditText
                android:id="@+id/address_edit_firstName_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_firstName_hint" />

            <EditText
                android:id="@+id/address_edit_lastName_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_lastName_hint" />

            <EditText
                android:id="@+id/address_edit_company_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_company_hint" />

            <EditText
                android:id="@+id/address_edit_streetNumber_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_streetNumber_hint" />

            <EditText
                android:id="@+id/address_edit_streetName_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_streetName_hint" />

            <EditText
                android:id="@+id/address_edit_city_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_city_hint" />

            <EditText
                android:id="@+id/address_edit_state_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_state_hint" />

            <EditText
                android:id="@+id/address_edit_zip_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_zip_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/submit_margin"
                    android:layout_gravity="left"
                    android:text="@string/submit_button" />

                <Button
                    android:id="@+id/address_edit_return_address_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/submit_margin"
                    android:layout_gravity="right"
                    android:text="@string/return_address_button"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="true"
            android:visibility="visible" />
    </RelativeLayout>
</RelativeLayout>