<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/search_option_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:padding="10dp"
        android:entries="@array/search_by_array"/>

    <TextView
        android:id="@+id/search_option_spinner_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by"
        android:padding="5dp"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/search_option_spinner_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/search_query_input_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/search_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom">

        <Button
            android:id="@+id/search_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_margin="@dimen/submit_margin"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/search_return_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="@dimen/submit_margin"
            android:text="@string/return_address_button" />

    </LinearLayout>


    <!--<RelativeLayout-->
        <!--android:id="@+id/loadingPanel"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:paddingBottom="40dp"-->
        <!--android:paddingLeft="40dp"-->
        <!--android:paddingRight="40dp"-->
        <!--android:paddingTop="40dp">-->

        <!--<ProgressBar-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:indeterminate="true"-->
            <!--android:visibility="visible" />-->
    <!--</RelativeLayout>-->

</LinearLayout>